--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div name="fav_animal">
+		<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwallpapercave.com%2Fbaby-cats-wallpapers&psig=AOvVaw0m5tgH6fuKCPNVGfJFlrGm&ust=1665379464220000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCLiaqYu00voCFQAAAAAdAAAAABAJ" size="320px">Cat</img>
+	</div>	
     <script type="text/javascript" src="./script.js">
 </script>
 
