--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div name="fav_animal">
-		<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwallpapercave.com%2Fbaby-cats-wallpapers&psig=AOvVaw0m5tgH6fuKCPNVGfJFlrGm&ust=1665379464220000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCLiaqYu00voCFQAAAAAdAAAAABAJ" size="320px" height="320px">Cat</img>
+		<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwallpapercave.com%2Fbaby-cats-wallpapers&psig=AOvVaw0m5tgH6fuKCPNVGfJFlrGm&ust=1665379464220000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCLiaqYu00voCFQAAAAAdAAAAABAJ" alt="cat_image" width="320px" height="320px">
 	</div>	
     <script type="text/javascript" src="./script.js">
 </script>
