--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div name="fav_animal">
-		<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwallpapercave.com%2Fbaby-cats-wallpapers&psig=AOvVaw0m5tgH6fuKCPNVGfJFlrGm&ust=1665379464220000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCLiaqYu00voCFQAAAAAdAAAAABAJ" alt="cat_image" width="320px" height="320px">
+		<img src="https://images.unsplash.com/photo-1599889959407-598566c6e1f1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MTZ8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="cat_image" width="320px" height="320px">
 	</div>	
     <script type="text/javascript" src="./script.js">
 </script>
