--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div name="fav_animal">
-		<img src="https://images.unsplash.com/photo-1599889959407-598566c6e1f1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MTZ8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="cat_image" width="320px" height="320px">
+		<img src="https://www.comfortzone.com/-/media/Images/ComfortZone-NA/US/Blog/bringing-new-kitten-home.jpg" alt="cat_image" width="320px" height="320px">
 	</div>	
     <script type="text/javascript" src="./script.js">
 </script>
